# tap-shortcut

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yaml  dynamic-publish.yaml  test.yaml  test.yml  update_catalog.yaml  update_catalog.yml  update_openapi.yml
scripts/: update_openapi.py
tap_shortcut/: __init__.py  __main__.py  client.py  openapi.json  streams.py  tap.py
tests/: conftest.py  test_core.py  test_openapi.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[categories].json  test_catalog_changes[epics].json  test_catalog_changes[files].json  test_catalog_changes[groups].json  test_catalog_changes[iterations].json  test_catalog_changes[labels].json  test_catalog_changes[members].json  test_catalog_changes[milestones].json  test_catalog_changes[project_stories].json  test_catalog_changes[projects].json  test_catalog_changes[repositories].json  test_catalog_changes[workflows].json
