[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-shortcut"
description = "Singer tap for Shortcut, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Shortcut",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests",
  "singer-sdk~=0.54.0a4",
  "toolz==1.1",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-shortcut = "tap_shortcut.tap:TapShortcut.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-shortcut#readme"
Homepage = "https://github.com/reservoir-data/tap-shortcut"
Source = "https://github.com/reservoir-data/tap-shortcut"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=9",
  "singer-sdk[testing]",
  "syrupy>=5",
]
typing = [
  "mypy",
  "toolz-stubs>=0.4",
  "ty>=0.0.1a16",
  "types-requests",
  { include-group = "testing" },
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
src = [
  "tap_shortcut",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
toolz-stubs = "toolz"
ty = "ty"
types-requests = "requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "default:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  "tox>=4.51",
  "tox-uv>=1.33",
]
env_list = [
  "dependencies",
  "typing",
  "test",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "testing" ]
labels = [ "check" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.test]
base_python_python = [ ".python-version" ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
labels = [ "check" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_shortcut", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_shortcut", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
description = "run tests on Python {py_dot_ver}"
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_SHORTCUT_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
